@@ -1,0 +1,10 @@
+<?php
+$upgrade_conf['centreon-clapi']["rname"] = "Centreon Command Line API";
+$upgrade_conf['centreon-clapi']["release_from"] = "1.7.0";
+$upgrade_conf['centreon-clapi']["release_to"] = "1.7.1";
+$upgrade_conf['centreon-clapi']["is_removeable"] = "1";
+$upgrade_conf['centreon-clapi']["author"] = "Centreon";
+$upgrade_conf['centreon-clapi']["lang_files"] = "0";
+$upgrade_conf['centreon-clapi']["sql_files"] = "0";
+$upgrade_conf['centreon-clapi']["php_files"] = "0";
+?>
